--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "use nodemon to watch changes on md file, rebuild codelab on saves",
   "main": "index.js",
   "scripts": {
-    "install-claat": "test -f claat || curl -Lo claat \"https://github.com/googlecodelabs/tools/releases/latest/download/claat-$(uname -s)-amd64\" && chmod +x claat",
+    "install-claat": "test -f claat || (OS=$(uname -s | tr '[:upper:]' '[:lower:]'); curl -Lo claat \"https://github.com/googlecodelabs/tools/releases/latest/download/claat-$OS-amd64\" && chmod +x claat)",
     "docs:build": "pnpm install-claat && ./claat export -o dist index.md",
     "docs:serve": "pnpm install-claat && nodemon --watch index.md --exec './claat export -o dist index.md && http-server dist/index'"
   },
